feat: adds sync call
